k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-gis-app
  labels:
    app: voice-gis-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voice-gis-app
  template:
    metadata:
      labels:
        app: voice-gis-app
    spec:
      containers:
        - name: voice-gis-app
          image: someone15me/voice-gis-app:latest   # Jenkins overwrites this
          imagePullPolicy: Always                     # always pull new image
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
